# Software-Development-Course

./: .gitignore  LICENSE  README.md  args_catch.py  data_types.py  environment.yml  handout_1.md  hello.py  matmul_python.py  mkdocs.yml  registration_test.py  show_paths.py  side_effects.py  try_package.py  trying_terminus.py  yielding.py
aoc_example/: aoc_day1.py  save_list.py
docs/: about.md  api.md  index.md
handout_10_logging_profiling/: line_profiling.py  logistic_map_profiling0.txt  logistic_map_profiling1.txt  profile_logistic_map.py  profile_logistic_map.py.lprof  readme.md
handout_12_parallelization_ff/: gil_example.py
handout_12_parallelization_ff/fitting_map/: not_parallel.py  not_parallel.py.lprof  parallelized.py
handout_12_parallelization_ff/logisitc_map_ff/: benchmarking.py
handout_13_parallelization_ff/: mpi_example.py
handout_13_parallelization_ff/calculator_ff/: calculator.c  python_calls.py
handout_2_packaging/: README.md  string_a  try_package.py
handout_3/: find_duplicates.py
handout_4/: logistic_map.py  logistic_map_doubt.py
handout_4_logistic_map/: logistic_map.py
handout_7_calculator/: my_calculator.py  tests.py
handout_8_c4model/: c4_numerical_integration.gv
handout_9_debugging/: connection_debug.py
manual_image_registration/: pyproject.toml
misc/: callling_c_example.py  main  main.c  matrix_multiply.py
packaging/: pyproject.toml
packaging/src/list_package_nikhil/: interleave.py  load_string.py  save_string.sublime-workspace
site/: 404.html  index.html  objects.inv
site/MkDocs_welcome/: index.html
(+14 files in other folders)
