[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "list_package_nikhil"
version = "0.0.1"
authors = [
  { name="Nikhil Keshav", email="nikhil.keshav@ltu.se" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib>=3.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"